# lexin-translate

./: .gitignore  LICENSE  nuxt.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
i18n/: i18n.config.ts
src-renderer/: index.d.ts
src-renderer/assets/css/: main.css
src-renderer/components/: Markdown.vue
src-renderer/components/Home/Component/: Card.vue
src-renderer/components/Home/Services/: Translate.vue
src-renderer/components/Home/Services/TranslateConfig/: Dialog.vue
src-renderer/components/Home/Services/TranslateConfig/Channel/: OpenAI.vue
src-renderer/components/Translate/: Input.vue  LangSelect.vue  TypeIcon.vue  TypeSelect.vue
src-renderer/components/Win/: TitleBar.vue
src-renderer/layouts/: titlebar.vue
src-renderer/pages/: playground.vue  test-cmds.vue  translate.vue
src-renderer/stores/: translate-api.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: languages.json
src-tauri/src/: consts.rs  lib.rs
src-tauri/src/core/: state.rs
src-tauri/src/module/: mod.rs  translate.rs
src-tauri/src/plugin/: mod.rs  simulator_input.rs  single_instance.rs
src-tauri/src/utils/: monitor_ex.rs  path.rs  settings.rs
src-tauri/src/windows/: home.rs  mod.rs  translate.rs  tray.rs
tests/ipynb/: deepl.ipynb
