[package]
name = "lexin"
version = "0.1.0"
description = "Lexin Navigator"
authors = ["pzyyll"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.80"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.6", features = [] }

[profile.release]
opt-level = "s"

[dependencies]
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
tauri = { version = "2.3.1", features = [
    "tray-icon",
    "image-ico",
    "image-png",
    "unstable",
] }
tauri-plugin-single-instance = "2.2.2"
tauri-plugin-shell = "2.2.0"
tauri-plugin-os = "2.2.1"
lazy_static = "1.5.0"
tauri-plugin-log = "2.3.0"
tauri-plugin-store = "2.2.0"
tauri-plugin-http = "2.4.0"
thiserror = "2.0.12"
base64 = "0.22.1"
reqwest = { version = "0.12.12", features = ["json", "stream", "multipart"] }
futures = "0.3.31"
log = { version = "0.4.26", features = ["kv_unstable"] }
libc = "0.2.171"
enigo = "0.3.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = { version = "2.2.0" }
tauri-plugin-window-state = "2.2.1"
tauri-plugin-clipboard-manager = "2.2.2"
mdict_analysis = { git = "https://github.com/pzyyll/mdict-analysis-rs.git", branch = "main" }
kmhook = { git = "https://github.com/pzyyll/kmhook-rs.git", branch = "main" }
# kmhook = {path="../../../kmhook-rs"}

[target."cfg(windows)".dependencies]
windows-core = "0.60.1"
windows = { version = "0.60.0", features = [
    "Win32_Graphics_Gdi",
    "UI_WindowManagement",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell_Common",
    "Win32_Foundation",
    "Win32_UI_Controls_RichEdit",
    "UI_Accessibility",
    "UI_UIAutomation",
    "UI_UIAutomation_Core",
    "Win32_System_Com",
] }

